# kavalier

./: .travis.yml  CMakeLists.txt  README.md
include/kavalier/: kavalier.h  version.h
src/: CMakeLists.txt  kavalier.cpp  version.cpp
tests/: CMakeLists.txt  test_kavalier.cpp
